--- a/charts/jellyfin/templates/jellyfin-svc.yaml
+++ b/charts/jellyfin/templates/jellyfin-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.jellyfin.svcName }}
+  name: {{ .Values.svcName }}
 spec:
   ports:
   - name: web
