--- a/charts/jackett/templates/jackett-deployment.yaml
+++ b/charts/jackett/templates/jackett-deployment.yaml
@@ -26,6 +26,10 @@ spec:
         name: jackett
         env:
 {{ toYaml .Values.env | indent 12 }}
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 9117
         resources:
 {{ toYaml .Values.resources | indent 12 }}
         ports:
