--- a/charts/jellyfin/templates/jellyfin-deployment.yaml
+++ b/charts/jellyfin/templates/jellyfin-deployment.yaml
@@ -24,6 +24,10 @@ spec:
       containers:
       - image: linuxserver/jellyfin
         name: jellyfin
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 8096
         resources:
           requests:
             cpu: 2
