--- a/charts/radarr/templates/radarr-deployment.yaml
+++ b/charts/radarr/templates/radarr-deployment.yaml
@@ -26,6 +26,10 @@ spec:
         name: radarr
         env:
 {{ toYaml .Values.env | indent 12 }}
+        readinessProbe:
+          httpGet:
+            path: /ping
+            port: 7878
         resources:
 {{ toYaml .Values.resources | indent 12 }}
         ports:
