--- a/charts/transmission-openvpn/templates/transmission-deployment.yaml
+++ b/charts/transmission-openvpn/templates/transmission-deployment.yaml
@@ -26,6 +26,17 @@ spec:
           imagePullPolicy: Always
           env:
 {{ toYaml .Values.env | indent 12 }}
+          livenessProbe:
+            exec:
+              command: ["ping", "-I", "tun0", "-c", "1", "cnn.com"]
+            failureThreshold: 3
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            successThreshold: 1
+          readinessProbe:
+            httpGet:
+              path: /transmission/web/
+              port: 9091
           ports:
             - name: http
               containerPort: 9091
