--- a/charts/transmission-openvpn/templates/transmission-deployment.yaml
+++ b/charts/transmission-openvpn/templates/transmission-deployment.yaml
@@ -33,10 +33,10 @@ spec:
             initialDelaySeconds: 10
             periodSeconds: 10
             successThreshold: 1
-          readinessProbe:
-            httpGet:
-              path: /transmission/web/
-              port: 9091
+          # readinessProbe:
+          #   httpGet:
+          #     path: /transmission/web/
+          #     port: 9091
           ports:
             - name: http
               containerPort: 9091
